--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button onClick="generateQRCode()" id="generate">Generate QR Code</button>
     </div>
     <script>
-        let imgbox=document.getElementById('imgbox');
+        let imgBox=document.getElementById('imgbox');
         let qrImage=document.getElementById('qrImage');
         let qrText=document.getElementById('qrText');
         let generateButton=document.getElementById('generate');
@@ -29,7 +29,7 @@
             }
             let url = `https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=${encodeURIComponent(text)}`;
             qrImage.src = url;
-            imgbox.style.display = "block";
+            imgBox.style.display = "block";
         }
     </script>
 </body>
